--- a/sample/appsettings.json
+++ b/sample/appsettings.json
@@ -8,5 +8,14 @@
     "HeaderName": "X-XSRF-TOKEN",
     "RequireSsl": true,
     "SuppressXFrameOptionsHeader": false
+  },
+  "hostingStartupAssemblies": [
+    "CoWorker.Models.Core.BootstrappingHostingStartup",
+    "CoWorker.Models.Security.SecurityHostingStartup",
+    "CoWorker.Models.Swagger.SwaggerHostingStartup",
+    "CoWorker.Models.IdentityServer.IdentityServerHostingStartup"
+  ],
+  "ApplicationInsights": {
+    "InstrumentationKey": "0a1cac9d-7932-47b4-a265-03756ff95ca8"
   }
 }
