--- a/src/CoWorker.Models.Identity/CoWorker.Models.Identity.csproj
+++ b/src/CoWorker.Models.Identity/CoWorker.Models.Identity.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
-    <PackageReference Include="Twilio" Version="5.8.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Twilio" Version="5.9.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CoWorker.Models.Abstractions\CoWorker.Models.Abstractions.csproj" />
     <ProjectReference Include="..\CoWorker.Primitives\CoWorker.Primitives.csproj" />
   </ItemGroup>
 
